styles/DestinationsPage.module.scss
.destinationPage {
  height: min-content;
  padding-inline: 2em;

  &::before {
    content: "";
    position: absolute;
    height: 100%;
    width: 100%;
    background-color: #15141e;
  }

  &::after {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 99%;
    background: #ffffff;
    border-radius: 0 0 50% 50%;
    transform: scaleX(2);
  }
}

.container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(30em, 1fr));
  justify-content: center;
  align-items: center;
  justify-items: center;

  height: 100%;
  width: min(100%, 1280px);
}

.destinations {
  align-self: baseline;
  position: relative;
  margin-top: 1em;
  margin-left: 1em;
  margin-bottom: 4em;
  max-width: 40em;
  min-width: 30em;
  z-index: 1;

  &::before {
    background: linear-gradient(180deg, #f4f0ff 0%, #ffffff 100%);
    border-radius: 2em;
    bottom: 0;
    content: "";
    left: -1em;
    position: absolute;
    top: 6em;
    width: 105%;
  }

  .icons {
    display: flex;
    flex-direction: column;
    gap: 12.5em;
    left: -2.5em;
    position: absolute;
    top: 13em;

    div {
      height: 4em;
      width: 4em;
      backdrop-filter: blur(10px);
      background: rgba(255, 255, 255, 0.5);
      border-radius: 50%;
      box-shadow: 0px 32px 56px rgba(68, 56, 107, 0.25);
      display: grid;
      place-items: center;
    }
  }
}

.hero {
  color: #454267;
  font-weight: 800;
  line-height: 1.4;
  z-index: 1;
  margin-block: 3em;

  @media (max-width: 640px) {
    // FIXME: 1px jump
    order: -1;
    text-align: center;
  }

  h3 {
    font-size: 3.375em;
    letter-spacing: -0.04em;
    margin: -0.5em 0;
  }

  h1 {
    font-size: 4.5em;
    letter-spacing: -0.06em;
    background: linear-gradient(273.07deg, #e95aec 0%, #8793ff 100%);
    background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .heroDescription {
    font-size: 1.5em;
    font-weight: 600;
    line-height: 1.5;
    letter-spacing: -0.04em;
    width: 20em;

    .highlightDark {
      color: #785bb6;
      background: #dcd6fb;
      border-radius: 0.5em;
      padding: 1px 5px 2px;
    }
  }
}

